--- a/index.html
+++ b/index.html
@@ -179,7 +179,8 @@
 
 		.secondary {
 			position: absolute;
-			margin-top: 2px;
+			margin-top: 3px;
+			margin-left: 2px;
 			cursor: pointer;
 		}
 
