--- a/geotest.html
+++ b/geotest.html
@@ -10,26 +10,46 @@
 	<p id="status">Press the button to get location.</p>
 
 	<script>
-		function getLocation() {
-			var status = document.getElementById('status');
+		async function getLocation() {
+			const status = document.getElementById('status');
+
 			if (!navigator.geolocation) {
 				status.textContent = 'Geolocation is not supported by your browser.';
 				return;
 			}
-			status.textContent = 'Locating...';
 
-			navigator.geolocation.getCurrentPosition(
-				function(position) {
-					status.textContent = 'Latitude: ' + position.coords.latitude + ', Longitude: ' + position.coords.longitude;
-					console.log('Position:', position);
-				},
-				function(error) {
-					status.textContent = 'Error: ' + error.message;
-					console.error('Geolocation error:', error);
-				}, {
-					timeout: 10000
+			try {
+				// Check permission state if supported
+				if (navigator.permissions) {
+					const permission = await navigator.permissions.query({
+						name: 'geolocation'
+					});
+					if (permission.state === 'denied') {
+						status.textContent = 'Geolocation permission is denied. Please enable it in site settings.';
+						return;
+					}
 				}
-			);
+
+				status.textContent = 'Locating...';
+
+				navigator.geolocation.getCurrentPosition(
+					pos => {
+						status.textContent =
+							`Latitude: ${pos.coords.latitude}, Longitude: ${pos.coords.longitude}`;
+						console.log('Position:', pos);
+					},
+					err => {
+						status.textContent = 'Error: ' + err.message;
+						console.error('Geolocation error:', err);
+					}, {
+						enableHighAccuracy: true,
+						timeout: 10000,
+						maximumAge: 0
+					}
+				);
+			} catch (err) {
+				status.textContent = 'Error checking permissions: ' + err.message;
+			}
 		}
 
 	</script>
