--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
 		.secondary {
 			position: absolute;
-/*
+			/*
 			margin-top: 3px;
 			margin-left: 2px;
 */
@@ -308,7 +308,7 @@
 			const ampm = hours >= 12 ? 'PM' : 'AM';
 			hours = hours % 12 || 12;
 			const timeStr = `${hours.toString().padStart(2,'0')}:${minutes.toString().padStart(2,'0')}:${seconds.toString().padStart(2,'0')}`;
-			$('digital-clock').innerHTML = `${timeStr}<br><span style="font-size:0.45em">${ampm}</span>`;
+			$('digital-clock').innerHTML = `${timeStr}<br><span style="font-size:30px">${ampm}</span>`;
 		}
 		setInterval(updateDigitalClock, 1000);
 		updateDigitalClock();
