--- a/index1.html
+++ b/index1.html
@@ -77,7 +77,7 @@
 
 		.card-section {
 			flex: 1 1 45%;
-
+			color: yellow;
 		}
 
 		.card h2 {
@@ -130,7 +130,7 @@
 		.tabs {
 			display: flex;
 			justify-content: center;
-			gap: 50px;
+			gap: 10px;
 			margin-bottom: 10px;
 		}
 
@@ -157,12 +157,12 @@
 		}
 
 		.calendar-day {
-			width: 40px;
+			width: 13%;
 			text-align: center;
 			font-size: 14px;
-			margin: 0;
+			margin: 4px 0;
 			cursor: pointer;
-			padding: 4px;
+			padding: 6px 4px;
 			border-radius: 10px;
 		}
 
@@ -258,26 +258,17 @@
 			</div>
 		</div>
 
-		<div class="card">
-			<div class="card-section">
-				<div class="prayer-list" id="prayer-list"></div>
-			</div>
-			<div class="card-section">
 
-				<div class="progress-section">
-					<div class="tabs">
-						<button class="active" onclick="showWeek()">Week</button>
-						<button onclick="showMonth()">Month</button>
-					</div>
-					<div class="calendar" id="calendar"></div>
-				</div>
+
+		<div class="prayer-list" id="prayer-list"></div>
+
+		<div class="progress-section">
+			<div class="tabs">
+				<button class="active" onclick="showWeek()">Week</button>
+				<button onclick="showMonth()">Month</button>
 			</div>
+			<div class="calendar" id="calendar"></div>
 		</div>
-
-
-
-
-
 	</div>
 
 	<!-- audio element: update src to your azan file name -->
