--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
 		.container {
 			width: 100%;
-			margin: auto;
+			margin: 0;
 		}
 
 		.date-box {
@@ -157,7 +157,7 @@
 		}
 
 		.calendar-day {
-			width: 40px;
+			width: 45px;
 			text-align: center;
 			font-size: 14px;
 			margin: 0;
