--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 
 				<div class="progress-section">
 					<div class="tabs">
-						<button class="active" onclick="showWeek()">Week</button>
+						<button class="active" onclick="showWeek()">Bi-Weekly</button>
 						<button onclick="showMonth()">Month</button>
 					</div>
 					<div class="calendar" id="calendar"></div>
